--- a/index.html
+++ b/index.html
@@ -109,13 +109,14 @@
   </div>  <!-- Leaflet JS -->  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>  <script>
     // -- Variables globales --
     let map, markerCurrent;
-    let routes = {};           // { name: [ stops ] }
+    let stopMarkers = [];
+    let routes = {};
     let routeOrder = [];
     let currentRoute = null;
     let currentStopIndex = 0;
     let watcherId = null;
     let updateInterval = null;
-    const avgSpeedMps = 10;    // m/s por defecto (ajustable)
+    const avgSpeedMps = 10;
 
     // -- Inicialización de mapa --
     function initMap() {
@@ -124,15 +125,27 @@
         attribution: '&copy; OpenStreetMap'
       }).addTo(map);
       markerCurrent = L.marker([0,0]).addTo(map);
+
+      // Click para agregar parada
+      map.on('click', e => {
+        if (!currentRoute) return alert('Seleccionar o crear ruta primero');
+        const { lat, lng } = e.latlng;
+        const arrival = prompt(`Hora llegada para parada (${lat.toFixed(5)}, ${lng.toFixed(5)}) (HH:MM):`, '00:00');
+        if (!arrival) return;
+        const departure = prompt(`Hora salida para parada (${lat.toFixed(5)}, ${lng.toFixed(5)}) (HH:MM):`, '00:00');
+        if (departure === null) return;
+        routes[currentRoute].push({ lat, lng, arrival, departure });
+        renderStops(); saveRoutes(); renderStopMarkers();
+      });
     }
 
-    // -- Cargar rutas de localStorage --
+    // -- Carga/Guarda rutas en localStorage --
     function loadRoutes() {
       const data = localStorage.getItem('sm_routes');
-      if(data) {
+      if (data) {
         const parsed = JSON.parse(data);
-        routes = parsed.routes||{};
-        routeOrder = parsed.order||[];
+        routes = parsed.routes || {};
+        routeOrder = parsed.order || [];
       }
       refreshRouteSelect();
     }
@@ -151,121 +164,134 @@
       sel.onchange();
     }
 
-    // -- Creación, borrado y selección de rutas --
-    document.getElementById('new-route-btn').onclick = ()=>{
+    // -- Eventos rutas --
+    document.getElementById('new-route-btn').onclick = () => {
       const name = document.getElementById('new-route-name').value.trim();
-      if(name && !routes[name]){
-        routes[name]=[]; routeOrder.push(name);
-        currentRoute=name; currentStopIndex=0; renderStops(); saveRoutes();
+      if (name && !routes[name]) {
+        routes[name] = [];
+        routeOrder.push(name);
+        currentRoute = name;
+        currentStopIndex = 0;
+        renderStops(); renderStopMarkers(); saveRoutes();
       }
     };
-    document.getElementById('delete-route-btn').onclick = ()=>{
-      if(currentRoute){ delete routes[currentRoute]; routeOrder = routeOrder.filter(n=>n!==currentRoute);
-        currentRoute = routeOrder[0]||null; currentStopIndex=0; renderStops(); saveRoutes(); }
+    document.getElementById('delete-route-btn').onclick = () => {
+      if (currentRoute) {
+        delete routes[currentRoute];
+        routeOrder = routeOrder.filter(n => n !== currentRoute);
+        currentRoute = routeOrder[0] || null;
+        currentStopIndex = 0;
+        renderStops(); renderStopMarkers(); saveRoutes();
+      }
     };
-    document.getElementById('route-select').onchange = ()=>{
+    document.getElementById('route-select').onchange = () => {
       currentRoute = document.getElementById('route-select').value;
       currentStopIndex = 0;
-      renderStops();
+      renderStops(); renderStopMarkers();
     };
 
-    // -- Gestión de paradas --
-    document.getElementById('add-stop-btn').onclick = ()=>{
-      if(!currentRoute) return alert('Crear o seleccionar ruta primero');
-      const ll = document.getElementById('stop-latlng').value.split(',').map(s=>parseFloat(s));
+    // -- Gestión paradas por formulario --
+    document.getElementById('add-stop-btn').onclick = () => {
+      if (!currentRoute) return alert('Crear o seleccionar ruta primero');
+      const ll = document.getElementById('stop-latlng').value.split(',').map(s => parseFloat(s));
       const arr = document.getElementById('stop-arrival').value;
       const dep = document.getElementById('stop-departure').value;
       routes[currentRoute].push({ lat: ll[0], lng: ll[1], arrival: arr, departure: dep });
-      renderStops(); saveRoutes();
+      renderStops(); saveRoutes(); renderStopMarkers();
     };
-    function renderStops(){
-      const tbody = document.getElementById('stops-table'); tbody.innerHTML='';
-      if(!currentRoute) return;
-      routes[currentRoute].forEach((stop,i)=>{
+
+    // -- Mostrar tabla de paradas --
+    function renderStops() {
+      const tbody = document.getElementById('stops-table'); tbody.innerHTML = '';
+      if (!currentRoute) return;
+      routes[currentRoute].forEach((stop, i) => {
         const tr = document.createElement('tr');
-        tr.innerHTML = `<td>${i+1}</td><td>${stop.lat.toFixed(5)}, ${stop.lng.toFixed(5)}</td>
-          <td>${stop.arrival}</td><td>${stop.departure}</td>
-          <td><button data-i="${i}" class="del-stop">X</button></td>`;
+        tr.innerHTML = `<td>${i+1}</td><td>${stop.lat.toFixed(5)}, ${stop.lng.toFixed(5)}</td><td>${stop.arrival}</td><td>${stop.departure}</td><td><button data-i="${i}" class="del-stop">X</button></td>`;
         tbody.appendChild(tr);
       });
-      tbody.querySelectorAll('.del-stop').forEach(btn=>{
-        btn.onclick = ()=>{
-          routes[currentRoute].splice(parseInt(btn.dataset.i),1);
-          renderStops(); saveRoutes();
+      tbody.querySelectorAll('.del-stop').forEach(btn => {
+        btn.onclick = () => {
+          routes[currentRoute].splice(parseInt(btn.dataset.i), 1);
+          renderStops(); saveRoutes(); renderStopMarkers();
         };
       });
     }
 
-    // -- Tracking GPS y cálculo de diferencia --
+    // -- Dibujar marcadores de paradas --
+    function renderStopMarkers() {
+      stopMarkers.forEach(m => map.removeLayer(m));
+      stopMarkers = [];
+      if (!currentRoute) return;
+      routes[currentRoute].forEach(stop => {
+        const m = L.marker([stop.lat, stop.lng]).addTo(map);
+        stopMarkers.push(m);
+      });
+    }
+
+    // -- Tracking y cálculo de tiempo --
     function startTracking() {
-      if(!currentRoute||routes[currentRoute].length===0) return alert('Agregar paradas primero');
-      document.getElementById('start-btn').disabled=true;
-      document.getElementById('stop-btn').disabled=false;
-      document.getElementById('prev-stop-btn').disabled=false;
-      document.getElementById('next-stop-btn').disabled=false;
+      if (!currentRoute || routes[currentRoute].length === 0) return alert('Agregar paradas primero');
+      document.getElementById('start-btn').disabled = true;
+      document.getElementById('stop-btn').disabled = false;
+      document.getElementById('prev-stop-btn').disabled = false;
+      document.getElementById('next-stop-btn').disabled = false;
       watcherId = navigator.geolocation.watchPosition(onLocation, console.error, { enableHighAccuracy: true });
       updateInterval = setInterval(updateTimeDiff, 1000);
     }
-    function stopTracking(){
+    function stopTracking() {
       navigator.geolocation.clearWatch(watcherId);
       clearInterval(updateInterval);
-      document.getElementById('start-btn').disabled=false;
-      document.getElementById('stop-btn').disabled=true;
+      document.getElementById('start-btn').disabled = false;
+      document.getElementById('stop-btn').disabled = true;
     }
     document.getElementById('start-btn').onclick = startTracking;
     document.getElementById('stop-btn').onclick = stopTracking;
-    document.getElementById('next-stop-btn').onclick = ()=>{ currentStopIndex = Math.min(currentStopIndex+1, routes[currentRoute].length-1); };
-    document.getElementById('prev-stop-btn').onclick = ()=>{ currentStopIndex = Math.max(currentStopIndex-1,0); };
+    document.getElementById('next-stop-btn').onclick = () => { currentStopIndex = Math.min(currentStopIndex + 1, routes[currentRoute].length - 1); };
+    document.getElementById('prev-stop-btn').onclick = () => { currentStopIndex = Math.max(currentStopIndex - 1, 0); };
 
     let currPos = null;
-    function onLocation(pos){
+    function onLocation(pos) {
       currPos = [pos.coords.latitude, pos.coords.longitude];
       markerCurrent.setLatLng(currPos);
       map.setView(currPos);
     }
-    function updateTimeDiff(){
-      if(!currPos) return;
-      const stops = routes[currentRoute]; if(!stops || !stops.length) return;
-      if(currentStopIndex>=stops.length){ advanceRoute(); return; }
+    function updateTimeDiff() {
+      if (!currPos) return;
+      const stops = routes[currentRoute]; if (!stops || !stops.length) return;
+      if (currentStopIndex >= stops.length) { advanceRoute(); return; }
       const stop = stops[currentStopIndex];
       const dist = map.distance(currPos, [stop.lat, stop.lng]);
       const now = new Date();
-      // Hora programada llegada parse
-      const [h,m] = stop.arrival.split(':').map(Number);
+      const [h, m] = stop.arrival.split(':').map(Number);
       const scheduled = new Date(now);
       scheduled.setHours(h, m, 0, 0);
-      // Estimado de viaje
       const travelSec = dist / avgSpeedMps;
-      let diffSec = (scheduled - now)/1000 - travelSec;
-      const sign = diffSec>=0? '+': '-';
+      let diffSec = (scheduled - now) / 1000 - travelSec;
+      const sign = diffSec >= 0 ? '+' : '-';
       diffSec = Math.abs(Math.round(diffSec));
-      const mm = String(Math.floor(diffSec/60)).padStart(2,'0');
-      const ss = String(diffSec%60).padStart(2,'0');
+      const mm = String(Math.floor(diffSec / 60)).padStart(2, '0');
+      const ss = String(diffSec % 60).padStart(2, '0');
       document.getElementById('time-diff').textContent = `${sign}${mm}:${ss}`;
-      // Avance automático al llegar cerca y auto-advance
-      if(document.getElementById('auto-advance').checked && dist<15){ // 15m radio
+      if (document.getElementById('auto-advance').checked && dist < 15) {
         currentStopIndex++;
       }
     }
 
-    // -- Avanzar a siguiente ruta --
-    function advanceRoute(){
+    // -- Avanzar rutas automáticamente --
+    function advanceRoute() {
       const idx = routeOrder.indexOf(currentRoute);
-      if(idx < routeOrder.length-1){
-        currentRoute = routeOrder[idx+1];
+      if (idx < routeOrder.length - 1) {
+        currentRoute = routeOrder[idx + 1];
         currentStopIndex = 0;
-        renderStops();
+        renderStops(); renderStopMarkers();
       } else {
-        // fin de todas
         stopTracking();
       }
     }
 
-    // -- Eventos guardar y cargar rutas --
     document.getElementById('save-route-btn').onclick = saveRoutes;
 
-    // -- Inicio --
-    window.onload = ()=>{
+    window.onload = () => {
       initMap(); loadRoutes();
     };
   </script></body>
