--- a/index.html
+++ b/index.html
@@ -6,64 +6,16 @@
   <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      background: #f5f5f5;
-    }
-    #map {
-      width: 100%;
-      height: 40vh;
-    }
-    .controls {
-      width: 95%;
-      max-width: 480px;
-      background: #fff;
-      padding: 1rem;
-      border-radius: 1rem;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      margin-top: -2rem;
-      z-index: 1000;
-    }
-    .controls h2 {
-      margin: 0 0 0.5rem;
-      font-size: 1.25rem;
-    }
-    .controls label {
-      display: block;
-      margin-top: 0.5rem;
-      font-size: 0.9rem;
-    }
-    .controls input, .controls button, .controls select {
-      width: 100%;
-      padding: 0.5rem;
-      margin-top: 0.25rem;
-      font-size: 1rem;
-    }
-    .controls table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 0.75rem;
-    }
-    .controls th, .controls td {
-      border: 1px solid #ddd;
-      padding: 0.5rem;
-      font-size: 0.85rem;
-      text-align: center;
-    }
-    .controls .status {
-      font-size: 1.5rem;
-      text-align: center;
-      margin-top: 0.5rem;
-    }
-    .btn-group {
-      display: flex;
-      gap: 0.5rem;
-      margin-top: 0.5rem;
-    }
+    body { margin: 0; font-family: Arial, sans-serif; display: flex; flex-direction: column; align-items: center; background: #f5f5f5; }
+    #map { width: 100%; height: 40vh; }
+    .controls { width: 95%; max-width: 480px; background: #fff; padding: 1rem; border-radius: 1rem; box-shadow: 0 2px 8px rgba(0,0,0,0.1); margin-top: -2rem; z-index: 1000; }
+    .controls h2 { margin: 0 0 0.5rem; font-size: 1.25rem; }
+    .controls label { display: block; margin-top: 0.5rem; font-size: 0.9rem; }
+    .controls input, .controls button, .controls select { width: 100%; padding: 0.5rem; margin-top: 0.25rem; font-size: 1rem; }
+    .controls table { width: 100%; border-collapse: collapse; margin-top: 0.75rem; }
+    .controls th, .controls td { border: 1px solid #ddd; padding: 0.5rem; font-size: 0.85rem; text-align: center; }
+    .controls .status { font-size: 1.5rem; text-align: center; margin-top: 0.5rem; }
+    .btn-group { display: flex; gap: 0.5rem; margin-top: 0.5rem; }
     .btn-group button { flex: 1; }
   </style>
 </head>
@@ -75,78 +27,60 @@
       <button id="new-route-btn">Nueva Ruta</button>
       <button id="save-route-btn">Guardar Ruta</button>
       <button id="delete-route-btn">Borrar Ruta</button>
-    </div><label>Nombre de ruta nueva:</label>
-<input type="text" id="new-route-name" placeholder="Nombre...">
-
-<hr>
-<h3>Paradas</h3>
-<label>Latitud, Longitud:</label>
-<input type="text" id="stop-latlng" placeholder="-34.6037, -58.3816">
-<label>Hora llegada (HH:MM):</label>
-<input type="time" id="stop-arrival">
-<label>Hora salida (HH:MM):</label>
-<input type="time" id="stop-departure">
-<button id="add-stop-btn">Añadir Parada</button>
-
-<table>
-  <thead>
-    <tr><th>#</th><th>Lat,Lng</th><th>Llegada</th><th>Salida</th><th>Acción</th></tr>
-  </thead>
-  <tbody id="stops-table"></tbody>
-</table>
-
-<div class="btn-group">
-  <button id="start-btn">Iniciar Seguimiento</button>
-  <button id="stop-btn" disabled>Detener Seguimiento</button>
-</div>
-<div class="btn-group">
-  <button id="prev-stop-btn" disabled>Anterior</button>
-  <button id="next-stop-btn" disabled>Siguiente</button>
-</div>
-<label><input type="checkbox" id="auto-advance" checked> Avance Automático</label>
-<div class="status" id="time-diff">+00:00</div>
-
+    </div>
+    <label>Nombre de ruta nueva:</label>
+    <input type="text" id="new-route-name" placeholder="Nombre...">
+    <hr>
+    <h3>Paradas</h3>
+    <label>Latitud, Longitud:</label>
+    <input type="text" id="stop-latlng" placeholder="-34.6037, -58.3816">
+    <label>Hora llegada (HH:MM):</label>
+    <input type="time" id="stop-arrival">
+    <label>Hora salida (HH:MM):</label>
+    <input type="time" id="stop-departure">
+    <button id="add-stop-btn">Añadir Parada</button>
+    <table>
+      <thead>
+        <tr><th>#</th><th>Lat,Lng</th><th>Llegada</th><th>Salida</th><th>Acción</th></tr>
+      </thead>
+      <tbody id="stops-table"></tbody>
+    </table>
+    <div class="btn-group">
+      <button id="start-btn">Iniciar Seguimiento</button>
+      <button id="stop-btn" disabled>Detener Seguimiento</button>
+    </div>
+    <div class="btn-group">
+      <button id="prev-stop-btn" disabled>Anterior</button>
+      <button id="next-stop-btn" disabled>Siguiente</button>
+    </div>
+    <label><input type="checkbox" id="auto-advance" checked> Avance Automático</label>
+    <div class="status" id="time-diff">+00:00</div>
   </div>  <!-- Leaflet JS -->  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>  <script>
-    // -- Variables globales --
-    let map, markerCurrent;
-    let stopMarkers = [];
-    let routes = {};
-    let routeOrder = [];
-    let currentRoute = null;
-    let currentStopIndex = 0;
-    let watcherId = null;
-    let updateInterval = null;
+    let map, markerCurrent, stopMarkers = [], routeLine;
+    let routes = {}, routeOrder = [], currentRoute = null, currentStopIndex = 0;
+    let watcherId = null, updateInterval = null;
     const avgSpeedMps = 10;
 
-    // -- Inicialización de mapa --
     function initMap() {
       map = L.map('map').setView([-34.6037, -58.3816], 13);
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; OpenStreetMap'
-      }).addTo(map);
-      markerCurrent = L.marker([0,0]).addTo(map);
-
-      // Click para agregar parada
+      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution: '&copy; OpenStreetMap' }).addTo(map);
+      // Marker de posición actual como círculo distinto
+      markerCurrent = L.circleMarker([0,0], { radius: 8, color: 'blue', fillColor: 'blue', fillOpacity: 0.7 }).addTo(map);
       map.on('click', e => {
         if (!currentRoute) return alert('Seleccionar o crear ruta primero');
         const { lat, lng } = e.latlng;
-        const arrival = prompt(`Hora llegada para parada (${lat.toFixed(5)}, ${lng.toFixed(5)}) (HH:MM):`, '00:00');
+        const arrival = prompt(`Hora llegada (HH:MM) para parada en [${lat.toFixed(5)},${lng.toFixed(5)}]:`, '00:00');
         if (!arrival) return;
-        const departure = prompt(`Hora salida para parada (${lat.toFixed(5)}, ${lng.toFixed(5)}) (HH:MM):`, '00:00');
+        const departure = prompt(`Hora salida (HH:MM) para parada en [${lat.toFixed(5)},${lng.toFixed(5)}]:`, '00:00');
         if (departure === null) return;
         routes[currentRoute].push({ lat, lng, arrival, departure });
-        renderStops(); saveRoutes(); renderStopMarkers();
+        renderStops(); saveRoutes(); renderStopMarkers(); renderRouteLine();
       });
     }
 
-    // -- Carga/Guarda rutas en localStorage --
     function loadRoutes() {
       const data = localStorage.getItem('sm_routes');
-      if (data) {
-        const parsed = JSON.parse(data);
-        routes = parsed.routes || {};
-        routeOrder = parsed.order || [];
-      }
+      if (data) { const parsed = JSON.parse(data); routes = parsed.routes || {}; routeOrder = parsed.order || []; }
       refreshRouteSelect();
     }
     function saveRoutes() {
@@ -154,53 +88,31 @@
       refreshRouteSelect();
     }
     function refreshRouteSelect() {
-      const sel = document.getElementById('route-select');
-      sel.innerHTML = '';
-      routeOrder.forEach(name => {
-        const opt = document.createElement('option'); opt.value = name; opt.text = name;
-        sel.appendChild(opt);
-      });
-      sel.value = currentRoute;
-      sel.onchange();
+      const sel = document.getElementById('route-select'); sel.innerHTML = '';
+      routeOrder.forEach(name => { const opt = document.createElement('option'); opt.value = name; opt.text = name; sel.appendChild(opt); });
+      sel.value = currentRoute; sel.onchange();
     }
 
-    // -- Eventos rutas --
     document.getElementById('new-route-btn').onclick = () => {
       const name = document.getElementById('new-route-name').value.trim();
-      if (name && !routes[name]) {
-        routes[name] = [];
-        routeOrder.push(name);
-        currentRoute = name;
-        currentStopIndex = 0;
-        renderStops(); renderStopMarkers(); saveRoutes();
-      }
+      if (name && !routes[name]) { routes[name] = []; routeOrder.push(name); currentRoute = name; currentStopIndex = 0; renderStops(); renderStopMarkers(); renderRouteLine(); saveRoutes(); }
     };
     document.getElementById('delete-route-btn').onclick = () => {
-      if (currentRoute) {
-        delete routes[currentRoute];
-        routeOrder = routeOrder.filter(n => n !== currentRoute);
-        currentRoute = routeOrder[0] || null;
-        currentStopIndex = 0;
-        renderStops(); renderStopMarkers(); saveRoutes();
-      }
+      if (currentRoute) { delete routes[currentRoute]; routeOrder = routeOrder.filter(n => n !== currentRoute); currentRoute = routeOrder[0] || null; currentStopIndex = 0; renderStops(); renderStopMarkers(); renderRouteLine(); saveRoutes(); }
     };
     document.getElementById('route-select').onchange = () => {
-      currentRoute = document.getElementById('route-select').value;
-      currentStopIndex = 0;
-      renderStops(); renderStopMarkers();
+      currentRoute = document.getElementById('route-select').value; currentStopIndex = 0; renderStops(); renderStopMarkers(); renderRouteLine();
     };
 
-    // -- Gestión paradas por formulario --
     document.getElementById('add-stop-btn').onclick = () => {
       if (!currentRoute) return alert('Crear o seleccionar ruta primero');
       const ll = document.getElementById('stop-latlng').value.split(',').map(s => parseFloat(s));
       const arr = document.getElementById('stop-arrival').value;
       const dep = document.getElementById('stop-departure').value;
       routes[currentRoute].push({ lat: ll[0], lng: ll[1], arrival: arr, departure: dep });
-      renderStops(); saveRoutes(); renderStopMarkers();
+      renderStops(); saveRoutes(); renderStopMarkers(); renderRouteLine();
     };
 
-    // -- Mostrar tabla de paradas --
     function renderStops() {
       const tbody = document.getElementById('stops-table'); tbody.innerHTML = '';
       if (!currentRoute) return;
@@ -212,37 +124,36 @@
       tbody.querySelectorAll('.del-stop').forEach(btn => {
         btn.onclick = () => {
           routes[currentRoute].splice(parseInt(btn.dataset.i), 1);
-          renderStops(); saveRoutes(); renderStopMarkers();
+          renderStops(); saveRoutes(); renderStopMarkers(); renderRouteLine();
         };
       });
     }
 
-    // -- Dibujar marcadores de paradas --
     function renderStopMarkers() {
-      stopMarkers.forEach(m => map.removeLayer(m));
-      stopMarkers = [];
+      stopMarkers.forEach(m => map.removeLayer(m)); stopMarkers = [];
       if (!currentRoute) return;
-      routes[currentRoute].forEach(stop => {
-        const m = L.marker([stop.lat, stop.lng]).addTo(map);
-        stopMarkers.push(m);
-      });
+      routes[currentRoute].forEach(stop => { const m = L.marker([stop.lat, stop.lng]).addTo(map); stopMarkers.push(m); });
     }
 
-    // -- Tracking y cálculo de tiempo --
+    function renderRouteLine() {
+      if (routeLine) map.removeLayer(routeLine);
+      if (!currentRoute) return;
+      const stops = routes[currentRoute];
+      if (stops.length < 2) return;
+      const latlngs = stops.map(s => [s.lat, s.lng]);
+      routeLine = L.polyline(latlngs, { color: 'red', weight: 3 }).addTo(map);
+    }
+
     function startTracking() {
       if (!currentRoute || routes[currentRoute].length === 0) return alert('Agregar paradas primero');
-      document.getElementById('start-btn').disabled = true;
-      document.getElementById('stop-btn').disabled = false;
-      document.getElementById('prev-stop-btn').disabled = false;
-      document.getElementById('next-stop-btn').disabled = false;
+      document.getElementById('start-btn').disabled = true; document.getElementById('stop-btn').disabled = false;
+      document.getElementById('prev-stop-btn').disabled = false; document.getElementById('next-stop-btn').disabled = false;
       watcherId = navigator.geolocation.watchPosition(onLocation, console.error, { enableHighAccuracy: true });
       updateInterval = setInterval(updateTimeDiff, 1000);
     }
     function stopTracking() {
-      navigator.geolocation.clearWatch(watcherId);
-      clearInterval(updateInterval);
-      document.getElementById('start-btn').disabled = false;
-      document.getElementById('stop-btn').disabled = true;
+      navigator.geolocation.clearWatch(watcherId); clearInterval(updateInterval);
+      document.getElementById('start-btn').disabled = false; document.getElementById('stop-btn').disabled = true;
     }
     document.getElementById('start-btn').onclick = startTracking;
     document.getElementById('stop-btn').onclick = stopTracking;
@@ -257,42 +168,29 @@
     }
     function updateTimeDiff() {
       if (!currPos) return;
-      const stops = routes[currentRoute]; if (!stops || !stops.length) return;
+      const stops = routes[currentRoute]; if (!stops.length) return;
       if (currentStopIndex >= stops.length) { advanceRoute(); return; }
       const stop = stops[currentStopIndex];
-      const dist = map.distance(currPos, [stop.lat, stop.lng]);
-      const now = new Date();
-      const [h, m] = stop.arrival.split(':').map(Number);
-      const scheduled = new Date(now);
-      scheduled.setHours(h, m, 0, 0);
+      const dist = map.distance(currPos, [stop.lat, stop.lng]); const now = new Date();
+      const [h,m] = stop.arrival.split(':').map(Number);
+      const scheduled = new Date(now); scheduled.setHours(h, m, 0, 0);
       const travelSec = dist / avgSpeedMps;
       let diffSec = (scheduled - now) / 1000 - travelSec;
-      const sign = diffSec >= 0 ? '+' : '-';
-      diffSec = Math.abs(Math.round(diffSec));
-      const mm = String(Math.floor(diffSec / 60)).padStart(2, '0');
-      const ss = String(diffSec % 60).padStart(2, '0');
+      const sign = diffSec >= 0 ? '+' : '-'; diffSec = Math.abs(Math.round(diffSec));
+      const mm = String(Math.floor(diffSec/60)).padStart(2,'0'); const ss = String(diffSec%60).padStart(2,'0');
       document.getElementById('time-diff').textContent = `${sign}${mm}:${ss}`;
-      if (document.getElementById('auto-advance').checked && dist < 15) {
-        currentStopIndex++;
-      }
+      if (document.getElementById('auto-advance').checked && dist < 15) currentStopIndex++;
     }
 
-    // -- Avanzar rutas automáticamente --
     function advanceRoute() {
       const idx = routeOrder.indexOf(currentRoute);
       if (idx < routeOrder.length - 1) {
-        currentRoute = routeOrder[idx + 1];
-        currentStopIndex = 0;
-        renderStops(); renderStopMarkers();
-      } else {
-        stopTracking();
-      }
+        currentRoute = routeOrder[idx + 1]; currentStopIndex = 0;
+        renderStops(); renderStopMarkers(); renderRouteLine();
+      } else stopTracking();
     }
 
     document.getElementById('save-route-btn').onclick = saveRoutes;
-
-    window.onload = () => {
-      initMap(); loadRoutes();
-    };
+    window.onload = () => { initMap(); loadRoutes(); };
   </script></body>
 </html>
