--- a/index.html
+++ b/index.html
@@ -1,107 +1,108 @@
-<!DOCTYPE html><html lang="es">
+<!DOCTYPE html>
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Smart Move Pro</title>
-  <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
-    /* AMOLED Black Theme */
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
       font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      background: #000000;
-      color: #FFFFFF;
+      background-color: #000;
+      color: #FFF;
     }
     #map {
       width: 100%;
       height: 40vh;
-    }.controls {
-  width: 95%;
-  max-width: 480px;
-  background: #000000;
-  padding: 1rem;
-  border-radius: 1rem;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.9);
-  margin-top: -2rem;
-  z-index: 1000;
-}
-.controls h2, .controls h3 {
-  margin: 0 0 0.5rem;
-  font-size: 1.25rem;
-  color: #FFFFFF;
-}
-.controls label {
-  display: block;
-  margin-top: 0.5rem;
-  font-size: 0.9rem;
-  color: #CCCCCC;
-}
-.controls input,
-.controls button,
-.controls select {
-  width: 100%;
-  padding: 0.5rem;
-  margin-top: 0.25rem;
-  font-size: 1rem;
-  background: #111111;
-  border: 1px solid #333333;
-  border-radius: 0.25rem;
-  color: #FFFFFF;
-}
-.controls button {
-  cursor: pointer;
-  transition: background 0.2s;
-}
-.controls button:hover {
-  background: #222222;
-}
-.controls table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 0.75rem;
-  background: #000000;
-}
-.controls th,
-.controls td {
-  border: 1px solid #111111;
-  padding: 0.5rem;
-  font-size: 0.85rem;
-  text-align: center;
-  color: #FFFFFF;
-}
-.current-stop {
-  background-color: #0055a5;
-  color: #FFFFFF;
-}
-.legend {
-  text-align: center;
-  margin-top: 0.5rem;
-  font-size: 1rem;
-  font-weight: bold;
-  color: #FFFFFF;
-}
-.controls .status {
-  font-size: 1.5rem;
-  text-align: center;
-  margin-top: 0.25rem;
-  color: #A5FF90;
-}
-.btn-group {
-  display: flex;
-  gap: 0.5rem;
-  margin-top: 0.5rem;
-}
-.btn-group button {
-  flex: 1;
-}
-hr {
-  border-color: #111111;
-}
-
+      z-index: 0;
+    }
+    .controls {
+      width: 95%;
+      max-width: 480px;
+      background-color: #000;
+      padding: 1rem;
+      border-radius: 1rem;
+      box-shadow: 0 2px 8px rgba(255, 255, 255, 0.1);
+      margin: -2rem auto 0;
+      position: relative;
+      z-index: 1000;
+    }
+    .controls h2, .controls h3 {
+      margin: 0 0 0.5rem;
+      font-size: 1.25rem;
+      color: #FFF;
+    }
+    .controls label {
+      display: block;
+      margin-top: 0.5rem;
+      font-size: 0.9rem;
+      color: #CCC;
+    }
+    .controls input,
+    .controls button,
+    .controls select {
+      width: 100%;
+      padding: 0.5rem;
+      margin-top: 0.25rem;
+      font-size: 1rem;
+      background-color: #000;
+      border: 1px solid #333;
+      border-radius: 0.25rem;
+      color: #FFF;
+    }
+    .controls button {
+      cursor: pointer;
+      transition: background 0.2s;
+    }
+    .controls button:hover {
+      background-color: #222;
+    }
+    .controls table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 0.75rem;
+      background-color: #000;
+    }
+    .controls th,
+    .controls td {
+      border: 1px solid #111;
+      padding: 0.5rem;
+      font-size: 0.85rem;
+      text-align: center;
+      color: #FFF;
+    }
+    .current-stop {
+      background-color: #0055a5;
+      color: #FFF;
+    }
+    .legend {
+      text-align: center;
+      margin-top: 0.5rem;
+      font-size: 1rem;
+      font-weight: bold;
+      color: #FFF;
+    }
+    .controls .status {
+      font-size: 1.5rem;
+      text-align: center;
+      margin-top: 0.25rem;
+      color: #A5FF90;
+    }
+    .btn-group {
+      display: flex;
+      gap: 0.5rem;
+      margin-top: 0.5rem;
+    }
+    .btn-group button {
+      flex: 1;
+    }
+    hr {
+      border: none;
+      border-top: 1px solid #111;
+      margin: 1rem 0;
+    }
   </style>
 </head>
 <body>
@@ -143,7 +144,14 @@ hr {
     <label><input type="checkbox" id="auto-advance" checked> Avance Automático</label>
     <div class="legend" id="next-stop-legend">PRÓXIMA PARADA: -</div>
     <div class="status" id="time-diff">+00:00</div>
-  </div>  <!-- Leaflet JS -->  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>  <script>
-    // El resto del script permanece igual
-  </script></body>
+  </div>
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script>
+    const map = L.map('map').setView([-34.6037, -58.3816], 13);
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      maxZoom: 19,
+      attribution: '© OpenStreetMap'
+    }).addTo(map);
+  </script>
+</body>
 </html>
